[package]
name = "SysProbe"
version = "0.1.0"
edition = "2021"
description = "Windows internals analysis library"
license = "MIT"

[lib]
name = "SysProbe"
crate-type = ["rlib"]

[dependencies]
winapi = { version = "0.3", features = [
    "processthreadsapi", "memoryapi", "synchapi", "handleapi",
    "winuser", "sysinfoapi", "winnt", "ntdef",
    "minwindef", "windef", "errhandlingapi", "profileapi", "heapapi",
    "threadpoollegacyapiset", "winbase", "tlhelp32", "psapi",
    "wintrust", "wincrypt", "softpub", "winerror",
    "wingdi", "winreg", "shellapi"
]}
ntapi = "0.4"
object = "0.38.1"
pdb = "0.8.0"
sha2 = "0.10.9"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
debug = false
overflow-checks = false
incremental = false
